No longer need display:inline-block since we wrapped the labels in a table.

--- a/gentleSelect/jquery-gentleSelect.css
+++ b/gentleSelect/jquery-gentleSelect.css
@@ -1,7 +1,6 @@
 .gentleselect-data { display: none; }
 
 .gentleselect-label {
-    display: inline-block;
     padding: 1px 20px 1px 20px;
     background-color: #eee;
     
